# smith

./: .env_template  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
scripts/: .env_template  .gitignore  Makefile  cli.py  pyproject.toml
scripts/policy_agent/: pipeline.py
scripts/policy_agent/policy_analysis/: update_policy_analysis.py
scripts/policy_agent/policy_analysis/cycle_detection/: __init__.py  update_cycle_detection.py
scripts/policy_agent/policy_analysis/dead_rules/: dead_rule_finder.py
scripts/policy_agent/policy_analysis/duplication/: update_duplication.py
scripts/policy_agent/policy_analysis/model_output_schema/: schema.py
scripts/policy_agent/policy_analysis/regal/: regal_finder.py
scripts/policy_agent/policy_evaluation/: run_policy_evaluation.py
scripts/policy_agent/policy_refinement/: README.md  refinement.py  regal_update.py
scripts/policy_agent/red_feedback/: red_feedback.py
scripts/policy_agent/red_feedback/tests/: test_all.py  test_parser.py  test_plugin.py  unlabeled_command1.json  unlabeled_command10.json  unlabeled_command11.json  unlabeled_command12.json  unlabeled_command19.json  unlabeled_command2.json  unlabeled_command3.json  unlabeled_command4.json  unlabeled_command5.json  unlabeled_command6.json  unlabeled_command7.json  unlabeled_command8.json  unlabeled_command9.json
scripts/policy_agent/reduce_improve/: detect_redundancy.py  duplication.sh  graph_redundancy.txt  redundancy.sh
scripts/policy_agent/scripts/: cluster.py  cluster_result  extract_case.py  extract_commands.py  io.py  parse_ast_to_graph.py  parse_commands.py
scripts/policy_generation/: __init__.py  extract_tools.py  validate_policy.py
scripts/test_case_evaluation/: apply_cross_validate.py  classify_guidance.py  cross_validate.py  metrics.py  tier1_rules.py  tier2_semantic.py  tier3_llm_judge.py  validate_labels.py
scripts/test_case_evaluation/visualization/: build_report.py
scripts/test_generation/: attack.py  attack_promptfoo.py  case_generation.py  convert_test_case.py  decompose.py  extract_extensions.py  extract_tool_args.py  grey_condition.py  pipeline.py  process_test_batch.py  variable_extraction.py
scripts/test_generation/ares/: .pre-commit-config.yaml  minimal.yaml
scripts/test_generation/ares/.github/workflows/: release.yml  testing.yml
scripts/test_generation/ares/assets/: attack_goals.json  direct_requests.json  direct_requests_generate.json  encoding_ascii85_attacks.json  encoding_ascii85_attacks_generate.json  encoding_base16_attacks.json  encoding_base16_attacks_generate.json  encoding_base2048_attacks.json  encoding_base2048_attacks_generate.json  encoding_base32_attacks.json  encoding_base32_attacks_generate.json  encoding_base64_attacks.json  encoding_base64_attacks_generate.json  encoding_braille_attacks.json  encoding_braille_attacks_generate.json  encoding_ecoji_attacks.json  encoding_ecoji_attacks_generate.json  encoding_hex_attacks.json  encoding_hex_attacks_generate.json  encoding_morse_attacks.json  encoding_morse_attacks_generate.json  encoding_nato_attacks.json  encoding_nato_attacks_generate.json  encoding_rot13_attacks.json  encoding_rot13_attacks_generate.json  encoding_uu_attacks.json  encoding_uu_attacks_generate.json  encoding_zalgo_attacks.json  encoding_zalgo_attacks_generate.json
scripts/test_generation/ares/example_configs/: intents.yaml  strategies.yaml
scripts/test_generation/ares/notebooks/: autodan_results.json
scripts/test_generation/ares/notebooks/plugins/autodan/: test_autodan.py
scripts/test_generation/ares/plugins/ares-autodan/src/ares_autodan/strategies/: autodan.py
scripts/test_generation/ares/src/ares/: intents.json  redteam.py  strategies.json
scripts/test_generation/ares/src/ares/connectors/: huggingface.py
scripts/test_generation/ares/src/ares/strategies/: attack_strategy.py
scripts/test_generation/ares/test_script/: test.py
scripts/test_generation/ares_config/: qwen-owasp-llm-01.yaml
scripts/test_generation/promptfoo/: attack.py  red.yaml
scripts/test_generation/resources/: decomp_attack_file_promptfoo.json  decomp_file.json  final_cases.json  grey_guidance.json  guidance.txt  system_vars.json  test_cases.json  vars_file.json
scripts/tests/: policy_testing.py  pytest.ini
scripts/tests/inputs/: commands
scripts/tests/inputs/bad_commands/: processed_command15.json  processed_command25.json
scripts/tests/inputs/benign_commands/: processed_command103.json  processed_command105.json  processed_command121.json  processed_command127.json  processed_command140.json  processed_command142.json  processed_command153.json  processed_command155.json  processed_command162.json  processed_command168.json  processed_command170.json  processed_command172.json  processed_command174.json  processed_command176.json  processed_command183.json  processed_command185.json  processed_command190.json  processed_command195.json  processed_command24.json  processed_command25.json  processed_command26.json  processed_command27.json  processed_command32.json  processed_command42.json  processed_command52.json  processed_command57.json  processed_command65.json  processed_command68.json  processed_command71.json  processed_command75.json  processed_command82.json  processed_command84.json
scripts/tests/integration/: convert_test_coverage.py  coverage.txt  coverage_analysis.txt  fn.txt  highlight.sh  score_card.sh  score_test_failures.txt  score_test_results.txt  scorecard_summary.txt  test_commands.py  test_pipeline.py  tn.txt  tp.txt
scripts/tests/integration/coverage/: policy_test.rego  revised_policy.rego
scripts/tests/tools/: analyze_coverage.sh  analyze_policy_diff.sh  coverage_analyzer.py  policy_diff_analyzer.py
scripts/tests/unit/: test_parser.py  test_visualize_policy.py
scripts/tools/: license_headers.py
scripts/visualization/: README.md  ast.dot  graph.html  graph.json  parse_graph_to_json.py
(+1113 files in other folders)
