[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smith"
version = "0.1.0"
description = "Automated policy lifecycle management for AI agents (OPA/Rego)."
# Note: the project README lives at the repository root, outside this package
# directory; setuptools forbids referencing files above the project root, so the
# long description is intentionally omitted here. See ../README.md.
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hailun Ding", email = "hailun.ding@ibm.com" },
    { name = "Sai Sree Chukkapalli", email = "saisreelaya.chukkapalli@ibm.com" },
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
]
maintainers = [
    { name = "Hailun Ding", email = "hailun.ding@ibm.com" },
    { name = "Sai Sree Chukkapalli", email = "saisreelaya.chukkapalli@ibm.com" },
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
]
keywords = ["opa", "rego", "policy", "ai-agents", "mcp", "security", "authorization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
# Runtime dependencies are declared in ../requirements.txt. Install them with:
#   pip install -r ../requirements.txt
# They are intentionally not duplicated here to keep a single source of truth.

[project.urls]
Homepage = "https://github.com/IBM/smith"
Repository = "https://github.com/IBM/smith"
Issues = "https://github.com/IBM/smith/issues"
Documentation = "https://github.com/IBM/smith#readme"

[project.scripts]
smith = "cli:main"

[tool.setuptools]
# Flat layout: `cli.py` is a top-level module and the pipeline packages live
# alongside it under scripts/. `scripts/` itself is the import root.
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "policy_agent*",
    "policy_generation*",
    "test_generation*",
    "test_case_evaluation*",
    "tests*",
]
# The vendored ARES tree is a separate upstream project, not part of Smith.
exclude = ["test_generation.ares*"]

[tool.ruff]
# Don't lint or format the vendored ARES red-teaming tree.
extend-exclude = ["test_generation/ares"]

[tool.black]
extend-exclude = "test_generation/ares"
